updated packages, styling fixes for easier readability

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -18,10 +18,14 @@
   flex-flow: column wrap;
   justify-content: flex-start;
   align-items: center;
-  max-width: 20vw;
-  min-width: 15vw;
-  max-height: 95vh;
-  min-height: 90vh;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  max-width: 15vw;
+  min-width: 5vw;
+  height: calc(100vh);
   border-right: 1px solid black;
   margin: 0;
   margin-right: 1vw;
@@ -107,8 +111,9 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   border: 1px solid black;
-  min-width: 40vw;
-  max-width: 60vw;
+  background-color: white;
+  min-width: 30vw;
+  max-width: 50vw;
   border-radius: 2px;
 }
 
@@ -132,10 +137,10 @@
 
 .createPostButton {
   border-radius: 5px;
-  min-height: 3vh;
-  max-height: 5vh;
-  min-width: 13vw;
-  max-width: 18vw;
+  min-height: 4vh;
+  max-height: 6vh;
+  min-width: 10vw;
+  max-width: 15vw;
 }
 
 .createPostButton:hover {
@@ -224,6 +229,8 @@
   justify-content: flex-start;
   align-items: center;
   width: 80%;
+  margin: 0;
+  margin-right: 10vw;
   overflow-y: scroll;
   overflow-x: hidden;
 }
